[gd_scene load_steps=41 format=3 uid="uid://cs32y82idycth"]

[ext_resource type="Script" path="res://Scene/deck_n_hand.gd" id="1_7mrde"]
[ext_resource type="Texture2D" uid="uid://nb2h8ypvnns5" path="res://Art/Background/Menu.png" id="2_rvfkv"]
[ext_resource type="Script" path="res://Scene/level_3.gd" id="2_vdlph"]
[ext_resource type="Texture2D" uid="uid://djr6o4bn35m3c" path="res://Theme/GUI.png" id="3_14hsi"]
[ext_resource type="Theme" uid="uid://bwti3w2ekyd6x" path="res://Theme/Default.tres" id="4_uwxsj"]
[ext_resource type="Script" path="res://Scene/hand.gd" id="5_0nk7l"]
[ext_resource type="Texture2D" uid="uid://dsbi1ef14wljv" path="res://Theme/Timer.png" id="5_imccv"]
[ext_resource type="Texture2D" uid="uid://ck6difb7rj8kn" path="res://Art/Assets/PokerChipPlus-Sheet.png" id="5_kpdkc"]
[ext_resource type="Script" path="res://Scene/timer.gd" id="6_bbl7y"]
[ext_resource type="Texture2D" uid="uid://crt88t7fq2mr6" path="res://Art/Assets/PokerChipMinus-Sheet.png" id="6_jyxyd"]
[ext_resource type="FontVariation" uid="uid://c0gi7x6ivyn1o" path="res://Theme/PixelFont.tres" id="6_pocqk"]
[ext_resource type="Script" path="res://BetButton.gd" id="7_lvpgb"]
[ext_resource type="Script" path="res://Scene/Offlinestop_watch.gd" id="8_krj43"]
[ext_resource type="Script" path="res://Scene/next_button.gd" id="8_ydmnt"]
[ext_resource type="Script" path="res://BetSlider.gd" id="9_yugt6"]
[ext_resource type="Texture2D" uid="uid://b81jns6s00era" path="res://Art/Background/PokerChip.png" id="10_6o6fl"]
[ext_resource type="Script" path="res://Scene/peek.gd" id="11_tdkpp"]
[ext_resource type="Script" path="res://Scene/hand_reroll.gd" id="13_ny567"]
[ext_resource type="Shader" path="res://Shader/VHSShader.gdshader" id="15_cdkhl"]
[ext_resource type="Texture2D" uid="uid://dndae4v4dgrv" path="res://CardAssets/card_binoculars.png" id="18_o66rl"]
[ext_resource type="Texture2D" uid="uid://cq0cx77chfhhh" path="res://CardAssets/card_dice.png" id="19_ehwtg"]
[ext_resource type="Texture2D" uid="uid://b0xdqwrt4oyhh" path="res://CardAssets/card_handreroll.png" id="21_p6dkf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nelhe"]
atlas = ExtResource("5_kpdkc")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpkmq"]
atlas = ExtResource("5_kpdkc")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bq2pt"]
atlas = ExtResource("5_kpdkc")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1dvk"]
atlas = ExtResource("5_kpdkc")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pv4t"]
atlas = ExtResource("5_kpdkc")
region = Rect2(512, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_qd18h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_nelhe")
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_kpkmq")
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_bq2pt")
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_l1dvk")
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_6pv4t")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ypywp"]
atlas = ExtResource("6_jyxyd")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u4im"]
atlas = ExtResource("6_jyxyd")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p05f"]
atlas = ExtResource("6_jyxyd")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n10ji"]
atlas = ExtResource("6_jyxyd")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_feajl"]
atlas = ExtResource("6_jyxyd")
region = Rect2(512, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_6bsnt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_ypywp")
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_2u4im")
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_6p05f")
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_n10ji")
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_feajl")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rr278"]
texture = ExtResource("5_imccv")
texture_margin_top = 13.6142
texture_margin_bottom = 23.4628

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7siv7"]
texture = ExtResource("3_14hsi")
region_rect = Rect2(81, 97, 30, 30)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xjgpn"]
content_margin_left = 10.0
bg_color = Color(0.00237129, 0.209337, 0.323004, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xcvv0"]
bg_color = Color(0.262074, 0.595719, 0.856455, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qh35y"]
content_margin_left = 30.0
content_margin_top = 19.0
content_margin_right = 24.0
texture = ExtResource("3_14hsi")
region_rect = Rect2(2, 34, 44, 44)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fkc56"]
shader = ExtResource("15_cdkhl")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.094
shader_parameter/scanlines_width = 0.051
shader_parameter/grille_opacity = 0.069
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 2.037
shader_parameter/roll_variation = 0.756
shader_parameter/distort_intensity = 0.004
shader_parameter/noise_opacity = 0.0
shader_parameter/noise_speed = 0.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = -0.00699995
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.08
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="DeckNHand" type="Node2D"]
script = ExtResource("1_7mrde")

[node name="LevelManager" type="Node2D" parent="."]
script = ExtResource("2_vdlph")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
texture = ExtResource("2_rvfkv")

[node name="Sprite2D" type="Sprite2D" parent="TextureRect"]
position = Vector2(466.5, 281)
scale = Vector2(14.1591, 11.3636)
texture = ExtResource("3_14hsi")
region_enabled = true
region_rect = Rect2(2, 34, 44, 44)

[node name="Level1Des" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 222.0
offset_top = 102.0
offset_right = 717.0
offset_bottom = 364.0
theme_override_font_sizes/font_size = 20
text = "
BOSS: Local Casino

Try to win 1,000,000 Chips in
3 minutes while only having 3
seconds to select cards



Keep in mind that Ties lose you
1/2 of how much you bet"

[node name="Animations" type="Node2D" parent="."]

[node name="PlusChip" type="AnimatedSprite2D" parent="Animations"]
position = Vector2(857, 439)
scale = Vector2(0.539062, 0.539062)
sprite_frames = SubResource("SpriteFrames_qd18h")

[node name="MinusChip" type="AnimatedSprite2D" parent="Animations"]
position = Vector2(859, 440)
scale = Vector2(0.492188, 0.492188)
sprite_frames = SubResource("SpriteFrames_6bsnt")

[node name="StopWatch" type="Label" parent="."]
visible = false
offset_left = 771.0
offset_top = 192.0
offset_right = 933.0
offset_bottom = 282.0
theme_override_colors/font_color = Color(0.869157, 0.154299, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_rr278")
text = "0 0 : 0 3"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_krj43")

[node name="Timer" type="Label" parent="."]
visible = false
offset_left = 768.0
offset_top = 24.0
offset_right = 930.0
offset_bottom = 114.0
theme_override_colors/font_color = Color(0.869157, 0.154299, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_rr278")
text = "0 0 : 0 3"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6_bbl7y")

[node name="WinLabel" type="Label" parent="."]
visible = false
offset_left = 219.0
offset_top = 69.0
offset_right = 724.0
offset_bottom = 382.0
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxTexture_7siv7")
text = "You WIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinButton" type="Button" parent="."]
visible = false
offset_left = 385.0
offset_top = 400.0
offset_right = 532.0
offset_bottom = 459.0
theme = ExtResource("4_uwxsj")
theme_override_font_sizes/font_size = 20
text = "Next"

[node name="LoseLabel" type="Label" parent="."]
visible = false
offset_left = 219.0
offset_top = 69.0
offset_right = 724.0
offset_bottom = 382.0
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxTexture_7siv7")
text = "You LOSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryButton" type="Button" parent="."]
visible = false
offset_left = 385.0
offset_top = 400.0
offset_right = 532.0
offset_bottom = 459.0
theme = ExtResource("4_uwxsj")
theme_override_font_sizes/font_size = 20
text = "Retry"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EnemyHand" type="Node2D" parent="CanvasLayer"]

[node name="PlayerHand" type="Node2D" parent="CanvasLayer"]
script = ExtResource("5_0nk7l")

[node name="PlayedCards" type="Node2D" parent="CanvasLayer"]

[node name="ClickedCards" type="Node2D" parent="CanvasLayer"]
script = ExtResource("5_0nk7l")

[node name="Deck" type="Node2D" parent="CanvasLayer"]

[node name="Bet" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 20.0
offset_top = 469.0
offset_right = 219.0
offset_bottom = 526.0
theme = ExtResource("4_uwxsj")
theme_override_fonts/font = ExtResource("6_pocqk")
theme_override_font_sizes/font_size = 60
text = "Bet"
script = ExtResource("7_lvpgb")

[node name="Play" type="Button" parent="CanvasLayer"]
offset_left = 358.0
offset_top = 396.0
offset_right = 562.0
offset_bottom = 467.0
theme = ExtResource("4_uwxsj")
theme_override_fonts/font = ExtResource("6_pocqk")
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="NextButton" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 763.0
offset_top = 327.0
offset_right = 920.0
offset_bottom = 385.0
theme = ExtResource("4_uwxsj")
theme_override_font_sizes/font_size = 22
text = "NEXT"
script = ExtResource("8_ydmnt")

[node name="BetSlider" type="VSlider" parent="CanvasLayer"]
visible = false
offset_left = 95.0
offset_top = 246.0
offset_right = 134.0
offset_bottom = 402.0
theme = ExtResource("4_uwxsj")
theme_override_styles/slider = SubResource("StyleBoxFlat_xjgpn")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_xcvv0")
max_value = 50000.0
step = 5.0
script = ExtResource("9_yugt6")

[node name="ChipCount" type="Label" parent="CanvasLayer"]
offset_left = 810.0
offset_top = 463.0
offset_right = 933.0
offset_bottom = 523.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="BetAmount" type="Label" parent="CanvasLayer"]
offset_left = 21.0
offset_top = 409.0
offset_right = 216.0
offset_bottom = 469.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerScore" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 742.0
offset_top = 227.0
offset_right = 947.0
offset_bottom = 300.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyChipCount" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 26.0
offset_top = 18.0
offset_right = 158.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokerChip" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(779, 491)
scale = Vector2(1.03125, 0.96875)
texture = ExtResource("10_6o6fl")

[node name="EnemyChip" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(184, 50)
scale = Vector2(1.06348, 0.938477)
texture = ExtResource("10_6o6fl")

[node name="Ability1" type="Node2D" parent="CanvasLayer"]
position = Vector2(921, 380)

[node name="Peek" type="Button" parent="CanvasLayer/Ability1"]
visible = false
offset_left = -22.0
offset_top = -28.0
offset_right = 21.0
offset_bottom = 29.0
script = ExtResource("11_tdkpp")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Ability1/Peek"]
position = Vector2(22, 28)
scale = Vector2(0.261533, 0.24216)
texture = ExtResource("18_o66rl")

[node name="CoolDown" type="Sprite2D" parent="CanvasLayer/Ability1/Peek"]
visible = false
modulate = Color(1, 1, 1, 0.580392)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(21.75, 28)
scale = Vector2(0.252976, 0.240741)
texture = ExtResource("19_ehwtg")

[node name="Label" type="Label" parent="CanvasLayer/Ability1/Peek"]
visible = false
layout_mode = 0
offset_left = -243.0
offset_top = -222.0
offset_right = 30.0
offset_bottom = -18.0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_qh35y")
text = "
Peek: Ability to see one 
of the Enemy Cards.


Use: Once"

[node name="HandReroll" type="Button" parent="CanvasLayer/Ability1"]
visible = false
offset_left = -19.0
offset_top = -27.0
offset_right = 19.0
offset_bottom = 28.0
script = ExtResource("13_ny567")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Ability1/HandReroll"]
position = Vector2(19, 28)
scale = Vector2(0.249302, 0.230835)
texture = ExtResource("21_p6dkf")

[node name="CoolDown" type="Sprite2D" parent="CanvasLayer/Ability1/HandReroll"]
visible = false
modulate = Color(1, 1, 1, 0.580392)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(21.75, 28)
scale = Vector2(0.252976, 0.240741)
texture = ExtResource("19_ehwtg")

[node name="Label" type="Label" parent="CanvasLayer/Ability1/HandReroll"]
visible = false
layout_mode = 0
offset_left = -289.0
offset_top = -224.0
offset_right = 38.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_qh35y")
text = "
HandReroll: Reroll your Cards


Use: Once"

[node name="Ability2" type="Node2D" parent="CanvasLayer"]
position = Vector2(921, 430)

[node name="Peek" type="Button" parent="CanvasLayer/Ability2"]
visible = false
offset_left = -22.0
offset_top = -8.0
offset_right = 21.0
offset_bottom = 49.0
script = ExtResource("11_tdkpp")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Ability2/Peek"]
position = Vector2(22, 28)
scale = Vector2(0.261533, 0.24216)
texture = ExtResource("18_o66rl")

[node name="CoolDown" type="Sprite2D" parent="CanvasLayer/Ability2/Peek"]
visible = false
modulate = Color(1, 1, 1, 0.580392)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(21.75, 28)
scale = Vector2(0.252976, 0.240741)
texture = ExtResource("19_ehwtg")

[node name="Label" type="Label" parent="CanvasLayer/Ability2/Peek"]
visible = false
layout_mode = 0
offset_left = -243.0
offset_top = -222.0
offset_right = 30.0
offset_bottom = -18.0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_qh35y")
text = "
Peek: Ability to see one 
of the Enemy Cards.


Use: Once"

[node name="HandReroll" type="Button" parent="CanvasLayer/Ability2"]
visible = false
offset_left = -19.0
offset_top = -7.0
offset_right = 19.0
offset_bottom = 48.0
script = ExtResource("13_ny567")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Ability2/HandReroll"]
position = Vector2(19, 28)
scale = Vector2(0.249302, 0.230835)
texture = ExtResource("21_p6dkf")

[node name="CoolDown" type="Sprite2D" parent="CanvasLayer/Ability2/HandReroll"]
visible = false
modulate = Color(1, 1, 1, 0.580392)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(21.75, 28)
scale = Vector2(0.252976, 0.240741)
texture = ExtResource("19_ehwtg")

[node name="Label" type="Label" parent="CanvasLayer/Ability2/HandReroll"]
visible = false
layout_mode = 0
offset_left = -289.0
offset_top = -224.0
offset_right = 38.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_qh35y")
text = "
HandReroll: Reroll your Cards


Use: Once"

[node name="MenuUI" type="Node2D" parent="CanvasLayer"]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MenuUI"]
offset_right = 961.0
offset_bottom = 539.0
color = Color(0.384314, 0.384314, 0.384314, 0.501961)

[node name="Resume" type="Button" parent="CanvasLayer/MenuUI"]
offset_left = 439.0
offset_top = 164.0
offset_right = 553.0
offset_bottom = 203.0
theme = ExtResource("4_uwxsj")
text = "Resume"

[node name="Settings" type="Button" parent="CanvasLayer/MenuUI"]
offset_left = 434.0
offset_top = 237.0
offset_right = 555.0
offset_bottom = 281.0
theme = ExtResource("4_uwxsj")
text = "Settings"

[node name="Quit" type="Button" parent="CanvasLayer/MenuUI"]
offset_left = 431.0
offset_top = 315.0
offset_right = 555.0
offset_bottom = 354.0
theme = ExtResource("4_uwxsj")
text = "Quit"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
material = SubResource("ShaderMaterial_fkc56")
offset_right = 958.0
offset_bottom = 541.0
mouse_filter = 2

[connection signal="pressed" from="WinButton" to="." method="_on_win_button_pressed"]
[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Bet" to="CanvasLayer/Bet" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/NextButton" to="CanvasLayer/NextButton" method="_on_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Ability1/Peek" to="CanvasLayer/Ability1/Peek" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Ability1/Peek" to="CanvasLayer/Ability1/Peek" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Ability1/Peek" to="CanvasLayer/Ability1/Peek" method="_on_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Ability1/HandReroll" to="CanvasLayer/Ability1/HandReroll" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Ability1/HandReroll" to="CanvasLayer/Ability1/HandReroll" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Ability1/HandReroll" to="CanvasLayer/Ability1/HandReroll" method="_on_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Ability2/Peek" to="CanvasLayer/Ability2/Peek" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Ability2/Peek" to="CanvasLayer/Ability2/Peek" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Ability2/Peek" to="CanvasLayer/Ability2/Peek" method="_on_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Ability2/HandReroll" to="CanvasLayer/Ability2/HandReroll" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Ability2/HandReroll" to="CanvasLayer/Ability2/HandReroll" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Ability2/HandReroll" to="CanvasLayer/Ability2/HandReroll" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUI/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUI/Quit" to="." method="_on_quit_pressed"]
